--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@microsoft/sp-office-ui-fabric-core": "1.17.2",
     "@microsoft/sp-property-pane": "1.17.2",
     "@microsoft/sp-webpart-base": "1.17.2",
+    "@pnp/sp": "^2.9.0",
     "bootstrap": "^5.3.0",
+    "moment": "^2.29.4",
     "office-ui-fabric-react": "^7.199.1",
     "react": "17.0.1",
     "react-bootstrap": "^2.7.4",
@@ -28,20 +30,20 @@
     "tslib": "2.3.1"
   },
   "devDependencies": {
-    "@microsoft/rush-stack-compiler-4.5": "0.5.0",
-    "@rushstack/eslint-config": "2.5.1",
-    "@microsoft/eslint-plugin-spfx": "1.17.2",
+    "@fluentui/react": "^7.199.1",
     "@microsoft/eslint-config-spfx": "1.17.2",
+    "@microsoft/eslint-plugin-spfx": "1.17.2",
+    "@microsoft/rush-stack-compiler-4.5": "0.5.0",
     "@microsoft/sp-build-web": "1.17.2",
+    "@microsoft/sp-module-interfaces": "1.17.2",
+    "@rushstack/eslint-config": "2.5.1",
+    "@types/react": "17.0.45",
+    "@types/react-dom": "17.0.17",
     "@types/webpack-env": "~1.15.2",
     "ajv": "^6.12.5",
     "eslint": "8.7.0",
-    "gulp": "4.0.2",
-    "typescript": "4.5.5",
-    "@types/react": "17.0.45",
-    "@types/react-dom": "17.0.17",
     "eslint-plugin-react-hooks": "4.3.0",
-    "@microsoft/sp-module-interfaces": "1.17.2",
-    "@fluentui/react": "^7.199.1"
+    "gulp": "4.0.2",
+    "typescript": "4.5.5"
   }
 }
